[package]
name = "rsmqttd"
version = "0.2.0"
edition = "2018"
license = "GPL-3.0"

[features]
default = ["plugin-basic-auth", "plugin-oso-acl"]

# plugins
plugin-basic-auth = ["rsmqtt-plugin-basic-auth"]
plugin-oso-acl = ["rsmqtt-plugin-oso-acl"]

[[test]]
name = "test"
harness = false

[dependencies]
codec = { path = "../../libs/codec", package = "rsmqtt-codec" }
service = { path = "../../libs/service", package = "rsmqtt-service" }
storage_memory = { path = "../../libs/storages/memory", package = "rsmqtt-storage-memory" }

anyhow = "1.0.41"
tokio = { version = "1.8.0", features = ["sync", "rt-multi-thread", "time", "macros", "net", "io-util"] }
tracing = "0.1.26"
tokio-stream = "0.1.6"
bytestring = "1.0.0"
serde_yaml = "0.8.17"
serde = { version = "1.0.126", features = ["derive"] }
structopt = "0.3.21"
tracing-subscriber = "0.2.19"
fnv = "1.0.7"
bytes = "1.0.1"
async-trait = "0.1.50"
dirs = "3.0.2"
tokio-rustls = "0.22.0"
warp = { version = "0.3.1", features = ["tls"] }
tokio-util = "0.6.7"
futures-util = { version = "0.3.15", features = ["sink"] }

# plugins
rsmqtt-plugin-basic-auth = { path = "../../libs/plugins/basic-auth", optional = true }
rsmqtt-plugin-oso-acl = { path = "../../libs/plugins/oso-acl", optional = true }

[dev-dependencies]
testutil = { path = "../../libs/testutil", package = "rsmqtt-testutil" }
datatest-stable = "0.1.1"
