[package]
name = "rsmqtt-codec"
version = "0.1.0"
edition = "2018"
license = "GPL-3.0"

[dependencies]
async-trait = "0.1.50"
bytes = { version = "1.0.1", features = ["serde"] }
bytestring = { version = "1.0.0", features = ["serde"] }
num_enum = "0.5.1"
serde = { version = "1.0.126", features = ["derive"] }
thiserror = "1.0.25"
tokio = { version = "1.8.0", features = ["io-util", "macros"] }
tokio-stream = "0.1.6"
