[package]
name = "rsmqtt-service"
version = "0.1.0"
edition = "2018"

[dependencies]
codec = { path = "../codec", package = "rsmqtt-codec" }

anyhow = "1.0.41"
serde_yaml = "0.8.17"
tokio = { version = "1.8.0", features = ["sync", "rt-multi-thread", "time", "macros", "net", "io-util"] }
tracing = "0.1.26"
tokio-stream = "0.1.6"
bytestring = "1.0.0"
serde = { version = "1.0.126", features = ["derive"] }
fnv = "1.0.7"
bytes = "1.0.1"
async-trait = "0.1.50"
indexmap = "1.7.0"
uuid = { version = "0.8.2", features = ["v4"] }
thiserror = "1.0.25"
version = "3.0.0"
