[package]
name = "rsmqtt-testutil"
version = "0.1.0"
edition = "2018"

[dependencies]
codec = { path = "../codec", package = "rsmqtt-codec" }
service = { path = "../service", package = "rsmqtt-service" }
storage_memory = { path = "../storages/memory", package = "rsmqtt-storage-memory" }

serde_yaml = "0.8.17"
serde = { version = "1.0.126", features = ["derive"] }
futures-util = "0.3.15"
tokio = { version = "1.8.0", features = ["sync", "time", "io-util"] }
bytestring = "1.0.0"
