[package]
name = "rsmqtt-plugin-oso-acl"
version = "0.3.0"
edition = "2018"

[dependencies]
service = { path = "../../service", package = "rsmqtt-service" }

oso = "0.13.1"
anyhow = "1.0.41"
serde_yaml = "0.8.17"
serde = { version = "1.0.126", features = ["derive"] }
async-trait = "0.1.50"
tracing = "0.1.26"

[dev-dependencies]
tokio = { version = "1.8.0", features = ["macros"] }
