[package]
name = "rsmqtt-storage-memory"
version = "0.1.0"
edition = "2018"

[dependencies]
codec = { path = "../../codec", package = "rsmqtt-codec" }
service = { path = "../../service", package = "rsmqtt-service" }

anyhow = "1.0.41"
async-trait = "0.1.50"
bytestring = "1.0.0"
tokio = { version = "1.8.0", features = ["sync"] }
parking_lot = "0.11.1"
fnv = "1.0.7"
fastrand = "1.4.1"
